--- a/web/css/site.css
+++ b/web/css/site.css
@@ -89,3 +89,12 @@ a.desc:after {
     padding: 10px 20px;
     margin: 0 0 15px 0;
 }
+
+.form-control {
+    width: 260px;
+}
+
+form div.required label.control-label:after {
+    content:" * ";
+    color:red;
+}
